--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [token]
 # Токен нужно вставить ПОД эту строку, 85 символов (НЕ ВК МИ токен!!!)
-
+Токен Кейт
 [username]
 # Сюда нужно вставить имя пользователя на pythonanywhere
-
+Имя аккаунта на потинэмивер
 [host]
 # Если не указано поле "username", сюда нужно вставить ссылку на callback модуль
 
